# pzflow-paper-2021

./: .gitignore  README.md  environment.yml  paper.mplstyle  pyproject.toml  requirements.txt  two-moons.ipynb
forward-modeling/: Untitled.ipynb  conditional-flow.ipynb  degradation-demo.ipynb  desc-dc2-dr6-redshift-flow.pkl  expectation_value_is_better.ipynb  galaxy_corner_plot.ipynb  main-flow-Copy1.ipynb  main-flow.ipynb  posteriors-Copy1.ipynb  posteriors-Copy2.ipynb  posteriors.ipynb  spline-resolution.ipynb  utils.py
forward-modeling/saved-flows/: complete-redshift-flow.pkl  conditional-flow.pzflow.pkl  desc-dc2-conditional-flow.pkl  desc-dc2-dr6-conditional-position-flow.pkl  desc-dc2-dr6-redshift-flow.pkl  desc-dc2-redshift-flow.pkl  incomplete-redshift-flow.pkl  main-flow.pzflow.pkl  specz-err-redshift-flow.pkl
photo-z/: CMNN_cat_creation.ipynb  pzflowRedshift.ipynb
