[tool.poetry]
name = "pzflow-paper"
version = "0.1.0"
description = "Repo for the pzflow paper."
authors = ["John Franklin Crenshaw <jfcrenshaw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pzflow = "^3.0.1"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
